# rust_freestanding

./: Cargo.toml
kernel/: Cargo.toml
kernel/src/: logger.rs  main.rs  vga_buffer.rs
src/: main.rs
